paint/support/test/tests/construct_runtime_ui/no_comma_after_where.stderr
error: Expected `,` or `{`
 --> $DIR/no_comma_after_where.rs:6:3
  |
6 |         Block = Block,
  |         ^^^^^
